	  still needs a lot of work.

	* Perl 5.8 code no longer gets executed under 5.10 when
	  executing write_invocation().

	* lex58.t tells the user that we'll get warnings under
	  Win32, and these are to be ignored.  This is due to
	  a Perl behaviour where it always calls the shell under
	  Win32, even when multi-arg system is used.

	* lex58.t no longer fails to compile on Perl 5.10 which
	  is still clobbering exotic open.  Perl 5.8 does not
	  clobber the exotic form.

	* Backcompat tests are all marked as TODO under perl 5.8

	* Makefile.PL moved back to saying autodie works under 5.8

1.10_04 Sat Jun 14 15:02:17 AUSEST 2008
	* Made all $VERSION numbers more friendly to static code
	  analysis tools (including CPAN).
	* Added a test to make sure all version numbers are incremented
	  in lock-step.

	* Started 5.8 support
		* Removed dependencies on 5.10 'use feature'.
		* Removed dependencies on 5.10 fieldhashes.
		* a::e::match no longer uses smart-match or //
		* %^H init doesn't use // anymore.
		* 5.8 won't try to use // in fatalised subs (kludge)

	* recv.t corrected to use a custom socket (closed for writing)
	  and to ignore SIGPIPEs.

1.10_03 Fri Jun 13 11:04:17 AUSEST 2008
	* Updated backwards compatibility tests to work on
	  non-Enligh systems.

1.10_02 Fri Jun 13 10:55:00 AUSEST 2008
	* Tweaked boilerplate test to remove windows-only paths.

1.10_01	Thu Jun 12 17:19:13 AUSEST 2008
	* First beta release of module.

1.09	UNRELEASED
	* Many changes not documented here.
	* Fatal is now fully backwaards compatible again.
	* system() can be fatalised/autodying if IPC::System::Simple
	  is installed.
	* Rationlisation of autodie::exception API.
	* autodie::exception->function() now always returns the
	  full function name as best we can find it, and not
	  what may be getting replaced (eg, CORE::open instead of
	  main::open).

1.08	Sat Mar 29 10:54:20 AUSEDT 2008
        Dual-lifed module internally from work I was doing on p5p.
