@@ -32,6 +32,9 @@ Revision history for Fatal
 
 	* Makefile.PL moved back to saying autodie works under 5.8
 
+	* Context/user-sub tests skipped under 5.8, which does
+	  not yet support autodying of user subs.
+
 1.10_04 Sat Jun 14 15:02:17 AUSEST 2008
 	* Made all $VERSION numbers more friendly to static code
 	  analysis tools (including CPAN).
